Поправил изменение и создание страницы курсаÐ
