# app/Http/Controllers/Courses/CourseController.php
@@ -198,9 +198,9 @@ class CourseController extends Controller
             if (isset($course)) {
                 ContentModel::create([
                     'course_id' => $course['id'],
+                    'page' => 1,
+                    'page_title' => 'Hello world!!!',
                     'content' => "---
-                    Hello world!!!
-
                     [![](https://avatars.githubusercontent.com/u/1680273?s=80&v=4)]
                     (https://avatars.githubusercontent.com/u/1680273?v=4)",
                 ]);
